[gd_scene load_steps=9 format=3 uid="uid://c4v0py0r1jbcf"]

[ext_resource type="Theme" uid="uid://6pv3nu7jn0wk" path="res://Scenes/theme.tres" id="1_qkivj"]
[ext_resource type="Script" path="res://Scenes/startui.gd" id="1_u52pd"]
[ext_resource type="Texture2D" uid="uid://7xkdh8p6mkiv" path="res://UISprite/metroarrow.png" id="3_r8f6h"]
[ext_resource type="Texture2D" uid="uid://bqpyaxxsll2gm" path="res://circle-512.png" id="4_8c6rx"]
[ext_resource type="FontFile" uid="uid://b1q2cdmncwl3b" path="res://helvetica-255/Helvetica.ttf" id="5_mj01v"]

[sub_resource type="Animation" id="Animation_467qh"]
resource_name = "OpeningAnimation"
length = 2.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Metroarrow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8, 0.95, 1),
"transitions": PackedFloat32Array(1.66045, 0.11921, 1.66045, 1, 1),
"update": 0,
"values": [Vector2(-746, 60), Vector2(546.25, 60), Vector2(343.25, 60), Vector2(427.098, 60), Vector2(527.25, 60)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Metroarrow2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.02, 0.62, 0.82, 0.97, 1.02),
"transitions": PackedFloat32Array(1.68179, 0.210224, 1, 1, 1),
"update": 0,
"values": [Vector2(-744, 73.62), Vector2(544, 73.62), Vector2(346, 73.62), Vector2(429, 73.62), Vector2(527, 73.62)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WhiteCircle:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.76, 1.52),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1e-05, 1e-05), Vector2(0.5, 0.5)]
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BlackCircle:scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0, 0.65, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.49, 1.52)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BlackCircle:scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0, 0.65, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.49, 1.52)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("RichTextLabel:modulate:r")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.8, 1.52)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("RichTextLabel:modulate:g")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.8, 1.52)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("RichTextLabel:modulate:b")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.8, 1.52)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("RichTextLabel:modulate:a")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, 0, 0, 0, 0, 1, 0, 0, 0, 0),
"times": PackedFloat32Array(0.8, 1.52)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("RichTextLabel2:theme_override_colors/default_color:r")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.8, 1.52)
}
tracks/10/type = "bezier"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("RichTextLabel2:theme_override_colors/default_color:g")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.8, 1.52)
}
tracks/11/type = "bezier"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("RichTextLabel2:theme_override_colors/default_color:b")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.8, 1.52)
}
tracks/12/type = "bezier"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("RichTextLabel2:theme_override_colors/default_color:a")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.8, 1.52)
}

[sub_resource type="Animation" id="Animation_dhepb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Metroarrow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(546.25, 60)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WhiteCircle:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BlackCircle:scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.65, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BlackCircle:scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.65, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RichTextLabel:modulate:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("RichTextLabel:modulate:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("RichTextLabel:modulate:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("RichTextLabel:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("RichTextLabel2:theme_override_colors/default_color:r")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("RichTextLabel2:theme_override_colors/default_color:g")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/10/type = "bezier"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("RichTextLabel2:theme_override_colors/default_color:b")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/11/type = "bezier"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("RichTextLabel2:theme_override_colors/default_color:a")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gfpxj"]
_data = {
"OpeningAnimation": SubResource("Animation_467qh"),
"RESET": SubResource("Animation_dhepb")
}

[node name="Start" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u52pd")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(29.4339, 16.44)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.196
anchor_right = 1.0
anchor_bottom = 1.0
scale = Vector2(1.00217, 1)

[node name="ImageDimensions_text" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_qkivj")
text = "Image Dimensions"
fit_content = true

[node name="Descriptor1_text" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_qkivj")
text = "Height and width in pixels."
fit_content = true

[node name="HeightScale_text" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
text = "Height Scale"
fit_content = true

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
text = "One corresponds with dramatic landscapes. | Zero corresponds to flat terrain.
"
fit_content = true

[node name="RichTextLabel2" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
text = "Maximum Number of Cities"
fit_content = true

[node name="RichTextLabel3" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
text = "This value will control how many cities appear on the generated terrain."
fit_content = true

[node name="testSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2

[node name="startButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Confirm & Generate"

[node name="Metroarrow2" type="Sprite2D" parent="."]
modulate = Color(0.576516, 0.088977, 0.0779086, 1)
position = Vector2(527, 73.62)
scale = Vector2(0.397351, 0.389457)
texture = ExtResource("3_r8f6h")

[node name="Metroarrow" type="Sprite2D" parent="."]
modulate = Color(0.933333, 0.207843, 0.180392, 1)
position = Vector2(546.25, 60)
scale = Vector2(0.397351, 0.397351)
texture = ExtResource("3_r8f6h")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gfpxj")
}

[node name="BlackCircle" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(1094, 80)
scale = Vector2(0.65, 0.65)
texture = ExtResource("4_8c6rx")

[node name="WhiteCircle" type="Sprite2D" parent="."]
position = Vector2(1094, 80)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("4_8c6rx")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 7.0
offset_top = 14.0
offset_right = 896.0
offset_bottom = 75.0
scale = Vector2(1.00376, 1)
theme = ExtResource("1_qkivj")
text = "Generation Options"
fit_content = true

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 76.0
offset_right = 899.0
offset_bottom = 137.0
scale = Vector2(1.00084, 1.01066)
theme = ExtResource("1_qkivj")
theme_override_colors/default_color = Color(1, 1, 1, 0)
theme_override_fonts/normal_font = ExtResource("5_mj01v")
theme_override_font_sizes/normal_font_size = 31
text = "Configure the settings to personalize your terrain."
fit_content = true

[connection signal="drag_ended" from="VBoxContainer/testSlider" to="." method="_on_test_slider_drag_ended"]
[connection signal="value_changed" from="VBoxContainer/testSlider" to="." method="_on_test_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/startButton" to="." method="_on_start_button_pressed"]
